deploy/manifests/designate-public-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: designate-public
  namespace: openstack
spec:
  parentRefs:
    - name: openstack-public-gateway
      namespace: openstack-gateway-system
      sectionName: https
  hostnames:
    - cloud.dcn.ssu.ac.kr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dns
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: designate-api
          port: 9001
